<resources>
    <string name="app_name">Wengage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choose_photo_title">Choose Photo</string>
    <string name="alphabetic_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabetic_digits_for_email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.;.,[]\';?>"{}|!@#$%^&amp;*()</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon</string>


    <string name="blog_text_1">\"FoodInTheCiyTo\". Grace unveils her favourite bowl of Ramen</string>
    <string name="blog_text_2">Curated by our Top Maven for French Cafes</string>
    <string name="blog_title_2">\"5 Secret Spots to dine in Toronto\"</string>

    <string name="blog_1_text_1_events">\"How to find the top Chefs\' \n weeknight dinners.\"</string>
    <string name="blog_2_text_1_events">\"The  Theatre Guide \n to What\'s on \n this summer\"</string>

    <!--<string name="API_KEY">AIzaSyCF9nMfpF4LXJudn6vw8JS8a6qOA6PDkwU</string>-->
    <string name="API_KEY">AIzaSyDethRZL729MUv_xKBl0VTwOpjWSOpX-YA</string>

    <!--Intro Screen text-->

    <string name="first_intro_screen_text"> Wengage connects women with \n other like minded women \n\n At any moment in time \n\n When you\'\d rather have\n company than go alone, or, \n miss out.</string>
    <string name="first_intro_screen_texts">I\'\d love to do that - if only I \nhad company.</string>
    <string name="second_intro_screen_text">Tap on the event you are \n interested in and see \n women looking to do the \n same thing - at the same \n time.</string>
    <string name="third_intro_screen_text">\"\Dining, the arts, the sports event, \n a concert... \n\n Curated for you, with your \n interests in mind, Wengage is \n designed to give you the \n information you want and need \n\n Vetted with a woman\'\s mind in \n mind. \n\n So you have confidence and \n control in your choices.</string>

    <!--Complete Profile 1-->
    <string name="complete_profile_text">Some basic information is required to set up your profile and deliver customized content.\n\nKnow that your personal data is never shared. </string>
    <string name="complete_profile_texts">2.To introduce you to</string>
    <string name="complete_profile_textsss">1.To deliver you curated</string>


    <!--Control Activity-->
    <string name="control_text">Knowing your interests allows us to curate information personally for you.\n\nIt also allows us to introduce you to women who have similar interests\n\nRemember,this personal data is only used for 2 reasons:</string>


    <!--Verifiy Gender Activity-->
    <string name="gender_text">To Verify you are a woman, we need a real-time photo.\n\nThis photo can be used as your profile picture or can be changed later at anytime.</string>


    <!--VenueHomeFragment-->
    <string name="whats_on_in">What\'s on in </string>
    <string name="toronto...">Toronto...</string>
    <string name="in_the_know">IN THE\nKNOW</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="verification_code_message">Enter the 4 digit code we sent you via mobile to continue</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="income_array">
        <item>Income level(optional)</item>
        <item>$0 - $50</item>
        <item>$50 - $100K</item>
        <item>$50 - $100K</item>
        <item>$100 - $200K</item>
        <item>$200 +</item>
        <item>Doesn\'\t matter</item>
        <item>Rather not say</item>
    </string-array>

    <string name="spinner_prompt">Gender</string>
    <string name="spinner_income_prompt">Income level(optional)</string>
    <string name="country_code_prompt">code</string>

    <!--//complete profile 2-->

    <string name="your_prefrences">Select your preferences \n\for each category</string>
    <string name="your_prefrencesss">Select your preferences \n\within each category</string>
    <string name="thankyou_text_1">Thank you for downloading wengage app.</string>
    <string name="thankyou_text_2">Start using wengage now or watch this quick demo.</string>
    <string name="thankyou_text_3">Start using Wengage</string>

    <string name="some_exception_occured">Some Exception Occured!!</string>
    <string name="something_went_wrong">Something Went Wrong!!</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">CHAT</string>
    <string name="title_dashboard">VENUES</string>
    <string name="title_notifications">Notifications</string>
    <string name="invite_a_friend">\tINVITE\nA FRIEND</string>
    <string name="txt_your_password_reset">We just need your registered email address to send your password reset.</string>
    <string name="thank_you_for_downloading_the_wengage_app">Thank you for downloading the\n\ Wengage app.</string>
    <string name="start_using_wengage_now_or_watch_quick_demo">Start using Wengage now or \n\watch quick demo.</string>
    <string name="crash_toast_text">Oops</string>

    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
</resources>
