<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.Main.FirstIntroScreen">

        <View
            android:id="@+id/top_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ECF0F1" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_black" />


        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/thankyou_text_1"
                android:textSize="19sp" />

            <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewHairLine
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/thankyou_text_2"
                android:layout_marginTop="20dp"
                android:textSize="19sp" />

            <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_color_meg"
                android:textStyle="bold"
                android:text="@string/thankyou_text_3"
                android:textSize="19sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_layout"
            android:gravity="bottom|center">


            <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewBold
                android:id="@+id/go"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/shape_button"
                android:layout_marginBottom="10dp"
                android:text="Go"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />

        </LinearLayout>


    </RelativeLayout>
