<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:src="@drawable/ic_left_arrow" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Confidence"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="invisible" />


        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_layout"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/control_text"
                android:textAlignment="center"
                android:textSize="@dimen/size_18" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">

                <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_profile_textsss"
                    android:textSize="@dimen/size_18" />

                <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="information."
                    android:textSize="@dimen/size_18" />

                <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_profile_texts"
                    android:textSize="@dimen/size_18" />

                <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="like-minded women."
                    android:textSize="@dimen/size_18" />
            </LinearLayout>


        </LinearLayout>

        <com.askonlinesolutions.wengage.CustomTexts.CustomTextViewBlack
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="25dp"
            android:background="@drawable/shape_button"
            android:gravity="center"
            android:onClick="onNext"
            android:text="Next"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>